# office-candy-weigher

./: Cargo.toml  LICENSE  README.md  memory.x  rust-toolchain.toml  rustfmt.toml
cad/: screen_facade.scad  screen_facade_backing.scad
src/: candy_weigher_ui.rs  config_consts.rs  flash.rs  hardware_controllers.rs  hx710.rs  main.rs  pimori_display.rs  pimori_display_leds.rs  pimoroni_display.rs  pimoroni_display_leds.rs  round_robin_select.rs  state.rs  tasks.rs  utils.rs
src/hardware_controllers/: flash.rs  pimoroni_display.rs  pimoroni_display_leds.rs
src/state/: effect.rs
