[package]
edition = "2024"
name = "office-candy-weigher"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "1.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.2"
eg-seven-segment = "0.2.0"
embedded-icon = { version = "0.0.1", features = ["48px"] }
mipidsi = { version = "0.10.0", features = ["defmt"] }
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["rp2040", "defmt", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.2"
heapless = "0.9.2"
futures = { version = "0.3.32", default-features = false }
pin-project = "1.1.11" 
static_cell = { version = "2.1.1", default-features = false }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-defmt"] }
effect-lite = { version = "0.2.0", path = "../effect-lite/effect-lite" }
hx71x-pio = { version = "0.1.0", path = "../hx71x-pio", features = ["rp2040"] }
# Pin to 0.8 for compatibility with embassy-rp 0.10
rand = { version = "0.8", default-features = false }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[features]
# Enable use of rotary encoder as hardware sim for weigher
hardware-sim = []
# Enable use of software sim for weigher
software-sim = []
